# solana-stablecoin-standard

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  05-final-report.md  state.json
app/: package.json  tailwind.config.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: OperationPanel.tsx  StablecoinForm.tsx  WalletProvider.tsx
app/src/lib/: program.ts
cli/: Cargo.toml
cli/src/: config.rs  main.rs  output.rs
cli/src/commands/: audit_log.rs  blacklist.rs  burn.rs  freeze.rs  holders.rs  init.rs  mint.rs  minters.rs  mod.rs  pause.rs  seize.rs  status.rs  thaw.rs
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  OPERATIONS.md  REQUIREMENTS_TRACEABILITY.md  SDK.md  SSS-1.md  SSS-2.md  SSS-3.md
docs/deployment-artifacts/20260226-010212-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-010936-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-011227-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-014909-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-015612-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-095130-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-101238-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-101628-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-102328-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-104955-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-105422-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-105701-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-105819-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-110057-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-111025-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-111645-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-111738-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-111859-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-112444-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-114317-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-114832-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-115508-localnet/: operator-keypair.json  transactions.txt  treasury-keypair.json
docs/deployment-artifacts/20260226-133410-devnet-manual/: transactions.txt
docs/deployment-artifacts/20260226-134621-devnet-manual/: balance-before.txt
docs/deployment-artifacts/20260226-134737-smoke/: transactions.txt
docs/deployment-artifacts/20260226-141644-localnet/: transactions.txt
docs/deployment-artifacts/20260226-142205-fuzz/: fuzz-offline.txt
docs/deployment-artifacts/20260226-144112-trident/: summary.txt
docs/deployment-artifacts/20260226-151619-management-localnet/: audit-log-devnet.txt  holders.txt  management-transactions.txt  summary.txt
docs/deployment-artifacts/20260226-200009-sdk-localnet/: sdk-core-tests.txt  sdk-runtime.json  summary.txt
docs/deployment-artifacts/20260301-170306-docker-compose-integration/: docker-compose-config.stderr.txt  docker-compose-config.stdout.txt  integration-test-report.md
docs/plans/: 2026-02-25-bounty-gap-closure-plan.md  2026-02-25-sss-design.md  2026-02-25-sss-implementation-plan.md
programs/sss-oracle/: Cargo.toml
programs/sss-oracle/src/: error.rs  lib.rs  state.rs
programs/sss-token/: Cargo.toml
programs/sss-token/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/sss-token/src/instructions/: add_to_blacklist.rs  burn.rs  freeze_account.rs  initialize.rs  mint.rs  mod.rs  pause.rs  remove_from_blacklist.rs  seize.rs  thaw_account.rs  transfer_authority.rs  unpause.rs  update_minter.rs  update_roles.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: error.rs  lib.rs
programs/sss-transfer-hook/src/instructions/: initialize_extra_account_meta.rs  mod.rs  transfer_hook.rs
scripts/: deploy-devnet.sh  devnet-keypair.json  devnet-smoke.sh  localnet-evidence.sh  sdk-evidence.sh
sdk/core/: package.json  tsconfig.json
sdk/core/src/: compliance.ts  errors.ts  (+6 more)
services/: .env.example  Dockerfile  docker-compose.yml
services/compliance/: Cargo.toml
services/compliance/src/: handlers.rs  main.rs  routes.rs
services/indexer/: Cargo.toml
services/indexer/src/: listener.rs  main.rs  parser.rs
services/mint-burn/: Cargo.toml
services/mint-burn/src/: handlers.rs  main.rs  routes.rs
services/shared/: Cargo.toml
services/shared/src/: auth.rs  db.rs  error.rs  lib.rs  metrics.rs  middleware.rs  rate_limit.rs  solana.rs  types.rs
services/webhook/: Cargo.toml
services/webhook/src/: delivery.rs  handlers.rs  main.rs  routes.rs
tests/: sss-1.ts  sss-2.ts
tests/helpers/: setup.ts
trident-tests/: README.md
tui/: Cargo.toml
tui/src/: app.rs  main.rs
tui/src/ui/: blacklist.rs  dashboard.rs  minters.rs  mod.rs  operations.rs
(+10 files in other folders)
