[workspace]
members = [
    "programs/sss-oracle",
    "programs/sss-token",
    "programs/sss-transfer-hook",
    "cli",
    "services/shared",
    "services/mint-burn",
    "services/compliance",
    "services/indexer",
    "services/webhook",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
constant_time_eq = { path = "vendor/constant_time_eq-0.4.2" }
blake3 = { path = "vendor/blake3-1.8.3" }
