[package]
name = "sss-token-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sss-token"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
solana-sdk = "2.1"
solana-client = "2.1"
solana-transaction-status = "2.1"
solana-account-decoder = "2.1"
anchor-client = "0.31.0"
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "2"
bs58 = "0.5"
