[package]
name = "sss-tui"
version = "0.1.0"
description = "Solana Stablecoin Standard - Admin TUI"
edition = "2021"

[[bin]]
name = "sss-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
solana-sdk = "2.1"
solana-client = "2.1"
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anchor-lang = "0.31.0"
