[package]
name = "sss-oracle"
version = "0.1.0"
description = "Solana Stablecoin Standard - Oracle Integration Module"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", default-features = false, features = ["token", "token_2022", "associated_token", "mint"] }
spl-token-2022 = { version = "6", default-features = false, features = ["no-entrypoint"] }
