[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "Solana Stablecoin Standard - Transfer Hook Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1", default-features = false, features = ["token", "token_2022", "associated_token", "mint"] }
spl-token-2022 = { version = "6", default-features = false, features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.8"
