[package]
name = "sss-compliance"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sss-compliance"
path = "src/main.rs"

[dependencies]
sss-shared = { path = "../shared" }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
anyhow = "1"
solana-sdk = "2.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
csv = "1.3"
chrono = "0.4"
http = "1"
