[package]
name = "sss-mint-burn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sss-mint-burn"
path = "src/main.rs"

[dependencies]
sss-shared = { path = "../shared" }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
anyhow = "1"
solana-sdk = "2.1"
spl-token-2022 = { version = "6.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0", features = ["no-entrypoint"] }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
http = "1"
