[package]
name = "sss-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.1"
solana-client = "2.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["macros"] }
