[package]
name = "sss-webhook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sss-webhook"
path = "src/main.rs"

[dependencies]
sss-shared = { path = "../shared" }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
anyhow = "1"
http = "1"
